syntax = "proto3";
package cosmos.liquidity;

import "gogoproto/gogo.proto";
//import "cosmos_proto/coin.proto";

option go_package = "github.com/tendermint/liquidity/types";
option (gogoproto.goproto_getters_all) = false;

message LiquidityPoolType {
   uint32 poolTypeIndex = 1 [(gogoproto.moretags) = "yaml:\"pool_type_index\""];
   uint32 NumOfReserveTokens = 2 [(gogoproto.moretags) = "yaml:\"num_of_reserve_tokens\""];
   string SwapPriceFunctionName = 3 [(gogoproto.moretags) = "yaml:\"swap_price_function_name\""];
   string Description = 4 [(gogoproto.moretags) = "yaml:\"description\""];
}

message Params {
    option (gogoproto.equal) = true;
    option (gogoproto.goproto_stringer) = false;

    repeated LiquidityPoolType LiquidityPoolTypes = 1 [
        (gogoproto.moretags) = "yaml:\"liquidity_pool_types\"",
        (gogoproto.nullable) = false
    ];
    string MinInitDepositToPool = 2 [
        (gogoproto.moretags)   = "yaml:\"min_init_deposit_to_pool\"",
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
        (gogoproto.nullable)   = false
    ];
    string InitPoolTokenMintAmount = 3 [
        (gogoproto.moretags)   = "yaml:\"init_pool_token_mint_amount\"",
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
        (gogoproto.nullable)   = false
    ];
    bytes SwapFeeRate = 4 [
        (gogoproto.moretags)   = "yaml:\"swap_fee_rate\"",
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable)   = false
    ];
    bytes LiquidityPoolFeeRate = 5 [
        (gogoproto.moretags)   = "yaml:\"liquidity_pool_fee_rate\"",
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable)   = false
    ];
}

message LiquidityPool {
    option (gogoproto.equal) = true;
    option (gogoproto.goproto_stringer) = false;

    uint64 PoolID = 1 [(gogoproto.moretags) = "yaml:\"pool_id\""];
    uint32 poolTypeIndex = 2 [(gogoproto.moretags) = "yaml:\"pool_type_index\""];
    repeated string ReserveTokenDenoms = 3 [(gogoproto.moretags) = "yaml:\"reserve_token_denoms\""];
    bytes ReserveAccount = 4 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress", (gogoproto.moretags) = "yaml:\"reserve_account\""];
    string PoolTokenDenom = 5 [(gogoproto.moretags) = "yaml:\"pool_token_denom\""];
    bytes SwapFeeRate = 6 [
        (gogoproto.moretags)   = "yaml:\"swap_fee_rate\"",
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable)   = false
    ];
    bytes PoolFeeRate = 7 [
        (gogoproto.moretags)   = "yaml:\"pool_fee_rate\"",
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable)   = false
    ];
    uint32 BatchSize = 8 [(gogoproto.moretags) = "yaml:\"batch_size\""];
}
